[package]
name = "ohttp"
version = "0.1.0"
edition = "2021"
authors = ["Anbang Wen <anbang@cloudflare.com>"]

[dependencies]
bytes = "1.0"
hpke = { version = "0.10.0", features = [ "std" ] }
thiserror = "1.0"
rand = { version = "0.8", features = [ "std_rng" ], default-features = false }
hkdf = "0.12"
generic-array = "0.14"
aead = "0.5"

[dev-dependencies]
hex-literal = "0.3"
rstest = "0.16"
x25519-dalek = "2.0.0-pre.1"
